--- a/style.css
+++ b/style.css
@@ -10,3 +10,9 @@ header {
     text-align: center;
     margin: 0 auto;
 }
+
+.gameboard > div {
+    width: 50px;
+    height: 50px;
+    background-color: cadetblue;
+}
