--- a/style.css
+++ b/style.css
@@ -9,10 +9,23 @@
 header {
     text-align: center;
     margin: 0 auto;
+    padding-bottom: 50px;
+}
+
+.gameboard {
+    display: flex;
+    gap: 5px;
+    flex-wrap: wrap;
+    width: 320px;
+    margin: 0 auto;
+
 }
 
 .gameboard > div {
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
     background-color: cadetblue;
+    border: 1px solid black;
+
+    
 }
